# DataPilot

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  test.py  test_charts.py  test_corr.py  test_corr_nan.py  test_dashboard.py  test_dtype.py
api/: index.html
datapilot/: __init__.py  config.py
datapilot/ai/: __init__.py  base.py  chat.py  factory.py  insights.py
datapilot/ai/providers/: claude_provider.py  gemini_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py
datapilot/analysis/: auto_clean.py  benchmark.py  compare.py  correlations.py  duplicates.py  eda.py  missing.py  outliers.py  suggest.py  summary.py  time_series.py
datapilot/dashboard/: dashboard.py
datapilot/ml/: __init__.py  classification.py  diagnostics.py  regression.py
datapilot/studio/: __init__.py  app.py  launcher.py
datapilot/utils/: validation.py
datapilot/visualization/: __init__.py  boxplot.py  heatmap.py  histogram.py  scatter.py  time_series.py  violin.py  visualize_ai.py
docs/: api.md
search/: search_index.json
tests/: test_analysis.py
