[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datapilot-polars"
version = "0.3.0"
description = "Your Data Science Copilot — Polars-native EDA, auto-cleaning, drift detection, and multi-provider AI insights"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "polars>=1.0.0",
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "ollama>=0.2.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
openai = ["openai>=1.0.0"]
gemini = ["google-generativeai>=0.7.0"]
claude = ["anthropic>=0.25.0"]
groq   = ["groq>=0.9.0"]
all-ai = [
    "openai>=1.0.0",
    "google-generativeai>=0.7.0",
    "anthropic>=0.25.0",
    "groq>=0.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["datapilot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["datapilot"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

